--- a/Week_1_Worksheet.ipynb
+++ b/Week_1_Worksheet.ipynb
@@ -142,25 +142,13 @@
       "metadata": {
         "id": "9iFhBsPPR3Gj",
         "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 34
-        },
-        "outputId": "bd455d7d-02c0-4096-80c4-514a63996fac"
+        "colab": {}
       },
       "source": [
         "print(X)"
       ],
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "6\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -188,30 +176,13 @@
       "metadata": {
         "id": "DtnamFHXUlXB",
         "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 34
-        },
-        "outputId": "fb822f1a-2775-4ef1-c029-5ce785199a7f"
+        "colab": {}
       },
       "source": [
         "X+5"
       ],
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "11"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 6
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -238,11 +209,7 @@
       "metadata": {
         "id": "_RWnLPMdVppv",
         "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 34
-        },
-        "outputId": "6ef7f997-e156-41d6-c35a-75886ab152bc"
+        "colab": {}
       },
       "source": [
         "alice = 1\n",
@@ -252,15 +219,7 @@
         "print (alice + the_bob + cathy3)"
       ],
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "6\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -281,26 +240,13 @@
       "metadata": {
         "id": "m-6lMQlCWO42",
         "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 128
-        },
-        "outputId": "362fbf01-5a6d-4451-ed96-c72a8b1ebddc"
+        "colab": {}
       },
       "source": [
         "2_daniel = 5"
       ],
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "error",
-          "ename": "SyntaxError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-9-0ce55ae74a6b>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    2_daniel = 5\u001b[0m\n\u001b[0m     ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid token\n"
-          ]
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -321,26 +267,14 @@
       "metadata": {
         "id": "nXzF0T1nWz6W",
         "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 34
-        },
-        "outputId": "03837924-7148-449f-d5ca-9d7a30f979ea"
+        "colab": {}
       },
       "source": [
         "Y = 5\n",
         "print(Y)"
       ],
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "5\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -357,27 +291,14 @@
       "metadata": {
         "id": "3pjWkpPdXHOI",
         "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 128
-        },
-        "outputId": "50e104bb-06f0-4beb-c09b-ce6bc9329803"
+        "colab": {}
       },
       "source": [
         "5 = Y\n",
         "print(Y)"
       ],
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "error",
-          "ename": "SyntaxError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-11-319e6fdf612f>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    5 = Y\u001b[0m\n\u001b[0m         ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m can't assign to literal\n"
-          ]
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -394,11 +315,7 @@
       "metadata": {
         "id": "5IwelXjSfZTB",
         "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 34
-        },
-        "outputId": "55be4bd1-935a-4b2d-c3d7-f6b0258d1b15"
+        "colab": {}
       },
       "source": [
         "X = 5\n",
@@ -406,15 +323,7 @@
         "print(X)"
       ],
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "1\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -438,11 +347,7 @@
       "metadata": {
         "id": "m1VQ4g6PggG2",
         "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 34
-        },
-        "outputId": "044378a0-6435-425b-e385-1dfed776d173"
+        "colab": {}
       },
       "source": [
         "X = 1\n",
@@ -451,15 +356,7 @@
         "print(Z)"
       ],
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "3\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -490,26 +387,14 @@
       "metadata": {
         "id": "ZXMR-UqUh5Ff",
         "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 34
-        },
-        "outputId": "b9e07352-66ce-49f3-a88a-d86a2d629c9f"
+        "colab": {}
       },
       "source": [
         "last_name = \"Lepinski\"\n",
         "print(my_name)"
       ],
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "Matt Lepinski\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -530,11 +415,7 @@
       "metadata": {
         "id": "PZYZKkuAio3O",
         "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 34
-        },
-        "outputId": "38039a9e-be75-4a81-ea3f-c463cbd97007"
+        "colab": {}
       },
       "source": [
         "Lepinski = 10\n",
@@ -542,15 +423,7 @@
         "print(last_name)"
       ],
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "10\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -567,11 +440,7 @@
       "metadata": {
         "id": "qHbPNL_1i5C-",
         "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 34
-        },
-        "outputId": "a3b4accf-1659-41a2-d925-200b31e6db4c"
+        "colab": {}
       },
       "source": [
         "Lepinski = 10\n",
@@ -579,15 +448,7 @@
         "print(last_name)"
       ],
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "Lepinski\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -604,11 +465,7 @@
       "metadata": {
         "id": "fEY55jxxjF0l",
         "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 34
-        },
-        "outputId": "00a59c07-89ab-4bfe-c8fd-04ea4025040a"
+        "colab": {}
       },
       "source": [
         "first_name = \"Matt\"\n",
@@ -617,15 +474,7 @@
         "print(name)"
       ],
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "MattLepinski\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -685,11 +534,7 @@
       "metadata": {
         "id": "iyxHvMpaj8w_",
         "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 67
-        },
-        "outputId": "0bba216e-de95-4b9a-cbd6-750dabbc4cf5"
+        "colab": {}
       },
       "source": [
         "first_name = input(\"Enter your first name:\")\n",
@@ -698,17 +543,7 @@
         "print(name)"
       ],
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "Enter your first name:Matt\n",
-            "Enter your last name:Lepinski\n",
-            "Matt Lepinski\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -729,11 +564,7 @@
       "metadata": {
         "id": "ROWVHW6OmEcH",
         "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 67
-        },
-        "outputId": "d2f08c65-0c93-4e8c-86c9-966b07fef3a0"
+        "colab": {}
       },
       "source": [
         "a_number = input(\"Enter a number:\")\n",
@@ -742,17 +573,7 @@
         "print(X)"
       ],
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "Enter a number:2\n",
-            "Enter another number:3\n",
-            "23\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -777,11 +598,7 @@
       "metadata": {
         "id": "UAtumh2IhTwV",
         "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 67
-        },
-        "outputId": "d798f5a0-d2ea-4f46-f6bd-961c89c02fd5"
+        "colab": {}
       },
       "source": [
         "a_number = int( input(\"Enter a number:\") )\n",
@@ -789,18 +606,8 @@
         "X = a_number + another_number\n",
         "print(X)"
       ],
-      "execution_count": 1,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "Enter a number:2\n",
-            "Enter another number:3\n",
-            "5\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -872,11 +679,7 @@
       "metadata": {
         "id": "1E7lz2oijcDj",
         "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 34
-        },
-        "outputId": "0c82f210-7d21-4b19-f092-7e6257699138"
+        "colab": {}
       },
       "source": [
         "age = 62\n",
@@ -885,16 +688,8 @@
         "if age < 15:\n",
         "  print(\"You are young\")"
       ],
-      "execution_count": 3,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "You are old\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
