--- a/Week_1_Worksheet.ipynb
+++ b/Week_1_Worksheet.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Week 1 Worksheet.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyP3wiK6f2IzaLg2bCvUL5Ua",
+      "authorship_tag": "ABX9TyNsnmsDNtY1Swt0bfuEKRSo",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -690,6 +690,91 @@
       ],
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "kpBEBh3jXm9M",
+        "colab_type": "text"
+      },
+      "source": [
+        "An if statement allows you to ask a question about a variable\n",
+        "\n",
+        "Common questions are > greater than, < less than, or == equals\n",
+        "\n",
+        "Note: Python uses == for the question \"is the variable equal to a particular value\" because the single = sign is used for the \"assign a value to a variable\" command. \n",
+        "\n",
+        "If the answer to the question in the if statement is true, then the command inside the if statement is run (otherwise the comamnd inside the if statement is ignored)\n",
+        "\n",
+        "Note that Python requires indentation for the command inside an if statement. We will talk more about this next week, but for now it is good to get used to the fact that the command inside an if statement must have a TAB key press to indent the command.  "
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "aH6z7UWKY1KL",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "color = input(\"What is your favorie color? \")\n",
+        "if color == \"yellow\":\n",
+        "  print(\"Hey, Yellow is also my favorite color\")\n",
+        "if not color == \"yellow\":\n",
+        "  print(\"I guess that is a pretty nice color\")"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "2ic7wmx-ZagI",
+        "colab_type": "text"
+      },
+      "source": [
+        "In the above code, the word \"not\" is used to ask the question \"Is the color not equal to yellow\"? \n",
+        "\n",
+        "This means that the command inside the second if statement is run when the color variable is something different from \"yellow\"\n",
+        "\n",
+        "In the block below, copy the Python code instructions from above into the empty area below. Then change the code to use your favorite color instead of yellow. (If yellow is actually your favorite color, then you are a sophisticated person of incredible taste ... but maybe you can pretend for one day that your favorite color is not yellow)\n",
+        "\n",
+        "In any case, once you change the Python code, please test it out to see if works. (You probably want to run it several times with different input colors to make sure it is doing what you want it to do.)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "zKmG3Ow-akUj",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "6ZdygmEGakr3",
+        "colab_type": "text"
+      },
+      "source": [
+        "\n",
+        "\n",
+        "---\n",
+        "\n",
+        "\n",
+        "\n",
+        "---\n",
+        "\n",
+        "\n",
+        "**THIS IS THE END OF THE WORKSHEET**\n",
+        "\n",
+        "Please find the programming assignment on Canvas so that you can try out what you learned. "
+      ]
     }
   ]
 }
