--- a/Week_2_Worksheet.ipynb
+++ b/Week_2_Worksheet.ipynb
@@ -5,7 +5,6 @@
     "colab": {
       "name": "Week 1 Worksheet.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNsnmsDNtY1Swt0bfuEKRSo",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -31,7 +30,7 @@
         "colab_type": "text"
       },
       "source": [
-        "# WEEK ONE WORKSHEET : Python Basics"
+        "# WEEK TWO WORKSHEET : Python Basics"
       ]
     },
     {
@@ -636,7 +635,7 @@
       "source": [
         "#cut and paste stuff here"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
