--- a/Week_2_Worksheet.ipynb
+++ b/Week_2_Worksheet.ipynb
@@ -390,7 +390,7 @@
       },
       "source": [
         "last_name = \"Lepinski\"\n",
-        "print(my_name)"
+        "print(last_name)"
       ],
       "execution_count": null,
       "outputs": []
