--- a/Week_3_Worksheet.ipynb
+++ b/Week_3_Worksheet.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Week 3 Worksheet.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyP9XgQ0DK2/CbWQwD5lLvLI",
+      "authorship_tag": "ABX9TyPJAfsvcBHhaAewxPMlqb+0",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -449,7 +449,11 @@
         "\n",
         "**DOING THINGS REPEATEDLY**\n",
         "\n",
-        "An if statement asks a question once and if the answer is True"
+        "An if statement asks a question once and does something if the answer is True\n",
+        "\n",
+        "This is great for doing something once, but sometime we want to do something repeatedly. \n",
+        "\n",
+        "To do things repeatedly, we can use a \"while\" loop"
       ]
     },
     {
@@ -460,10 +464,176 @@
         "colab": {}
       },
       "source": [
-        ""
+        "counter = 1\n",
+        "while counter < 10:\n",
+        "  counter = counter + 1\n",
+        "print(counter)"
       ],
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "xCZ-9Y468Cvu",
+        "colab_type": "text"
+      },
+      "source": [
+        "A \"while\" loop keeps doing something (whatever is inside the loop) until the answer to the question is False\n",
+        "\n",
+        "Above we have a simple loop repeatedly adds 1 to a variable (which I called \"counter\") until it is no longer the case that counter < 10\n",
+        "\n",
+        "Then it prints the value of the counter after the loop is done. \n",
+        "\n",
+        "To better see what is going on, here let's add another print statement"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "gp3ohAAQ8pF-",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "counter = 1\n",
+        "while counter < 10:\n",
+        "  print(\"I am inside the loop and the value of the counter is\", counter)\n",
+        "  counter = counter + 1\n",
+        "print(counter)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Kgyz9Pj38-c9",
+        "colab_type": "text"
+      },
+      "source": [
+        "Note that just like for an \"if\", we can put a block of multiple statements inside a \"while\" loop. The things that are indented are inside the loop, and the print statement that is not indendent will be executed AFTER the loop is complete.\n",
+        "\n",
+        "---\n",
+        "\n",
+        "\n",
+        "\n",
+        "While loops are often useful when you are asking the user to enter some input, because users often type the wrong thing.\n",
+        "\n",
+        "Here is an example where we want the user to enter a number between 1 and 10. We will write a \"while\" loop that keeps asking the user for input as long as the number they enter is NOT between 1 and 10. \n",
+        "\n",
+        "(A number is between 1 and 10 if it is both \"greater than 0\" and \"less than 11\")"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "DEf0Awed9fbt",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "while not (number > 0 and number < 11):\n",
+        "  number = input(\"Enter a number between 1 and 10: \")\n"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "OWgZHt6P-Zaj",
+        "colab_type": "text"
+      },
+      "source": [
+        "Okay, that didn't work. Python complained because at the top of the \"while\" loop, we asked a question about the variable number, but we hadn't yet assigned a value to number.\n",
+        "\n",
+        "It is a very common mistake in Python to refer to a variable before you have put a value in the variable\n",
+        "\n",
+        "To correct this, we need to first give a value to the variable outside the loop."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "-8vznW9v-Irm",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "number = input(\"Enter a number between 1 and 10: \")\n",
+        "while not (number > 0 and number < 11):\n",
+        "  print(\"No you fool!\", number, \"isn't between 1 and 10\")\n",
+        "  number = input(\"Enter a number between 1 and 10: \")"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "RGfrPYR_ALzV",
+        "colab_type": "text"
+      },
+      "source": [
+        "Sometimes we might want to count how many times we go through a \"while\" loop. \n",
+        "\n",
+        "It is easy to do this by adding a counter variable and adding one to the counter variable each time you go through the loop."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "0KjB-EusAX6z",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "counter = 0\n",
+        "\n",
+        "number = input(\"Enter a number between 1 and 10: \")\n",
+        "while not (number > 0 and number < 11):\n",
+        "  print(\"No you fool!\", number, \"isn't between 1 and 10\")\n",
+        "  number = input(\"Enter a number between 1 and 10: \")\n",
+        "\n",
+        "  counter = counter + 1\n",
+        "print(\"You entered\", counter, \"wrong numbers before you entered a number between 1 and 10\")"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "2GwrpZyg_P-D",
+        "colab_type": "text"
+      },
+      "source": [
+        "\n",
+        "\n",
+        "---\n",
+        "\n",
+        "\n",
+        "\n",
+        "---\n",
+        "\n",
+        "\n",
+        "**ANOTHER TYPE OF LOOP**\n",
+        "\n",
+        "While loops are great for doing things until some stop condition is reached. (Like in our last example, until the user enters a number between 1 and 10.)\n",
+        "\n",
+        "However, sometimes you just want Python to do something a certain number of times"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "9dMB8rw0_IqW",
+        "colab_type": "text"
+      },
+      "source": [
+        "for "
+      ]
     }
   ]
 }
