--- a/Week_3_Worksheet.ipynb
+++ b/Week_3_Worksheet.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Week 3 Worksheet.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPJAfsvcBHhaAewxPMlqb+0",
+      "authorship_tag": "ABX9TyMiJaFk434DWIEIrpy7T2XY",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -626,13 +626,231 @@
       ]
     },
     {
+      "cell_type": "code",
+      "metadata": {
+        "id": "rbOsSrFGBU1q",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "for some_variable_name in range(5):\n",
+        "  print(\"Happy Birthday to You!)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
       "cell_type": "markdown",
       "metadata": {
-        "id": "9dMB8rw0_IqW",
+        "id": "GpyGZZYwBSD0",
         "colab_type": "text"
       },
       "source": [
-        "for "
+        "This code tells Python to print \"Happy Birthday to You!\" five times\n",
+        "\n",
+        "In the example above \"some_variable_name\" can be any name that you want\n",
+        "\n",
+        "Each time through the loop, Python puts a different number into the loop variable. (We call the variable in a for loop either a \"loop variable\" or a \"loop control variable\")\n",
+        "\n",
+        "Let's see what Python is doing with our variable"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "clbTHPoDB5u7",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "for matt_variable in range(5):\n",
+        "  print(\"Matt's Variable is now\", matt_variable)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "mYSeHAXOCCiJ",
+        "colab_type": "text"
+      },
+      "source": [
+        "You can see that Python is giving matt_variable the value of 0 the first time through the loop\n",
+        "\n",
+        "... and 1 the next time through the loop\n",
+        "\n",
+        "... and 2 the next time through the loop\n",
+        "\n",
+        "... and then 3 the next time through the loop\n",
+        "\n",
+        "... and the value of 4 the last time through the loop\n",
+        "\n",
+        "In Python, \"range(5)\" is short had for \"all of the numbers starting at 0 and less than 5\"\n",
+        "\n",
+        "Here is another program that does exactly the same thing:"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "CQoFkbm2CgFK",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "for matt_variable in [0,1,2,3,4]:\n",
+        "  print(\"Matt's Variable is now\", matt_variable)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "yM7iHKoXCkFn",
+        "colab_type": "text"
+      },
+      "source": [
+        "You can use square brackets [ and ] to list out exactly the values that you want Python to put into loop variable\n",
+        "\n",
+        "However, it is sometimes easier to write \"range(10)\" instead of \"[0,1,2,3,4,5,6,7,8,0]\"\n",
+        "\n",
+        "Here is an example where the numbers aren't in order:"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "xjTEfR0LCnSV",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "for matt_variable in [2, 5, 8, 1, 4]:\n",
+        "  print(\"Matt's Variable is now\", matt_variable)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "g1c8I9ZwDI-d",
+        "colab_type": "text"
+      },
+      "source": [
+        "This is one way to get Python to add a bunch of numbers\n",
+        "\n",
+        "The following program adds all of the number between 0 and 5\n",
+        "\n",
+        "(Recall that 0 + 1 + 2 + 3 + 4 + 5 is 15)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "dLY-7NmtDea4",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "answer = 0\n",
+        "for number in range(6):\n",
+        "  answer = number + answer\n",
+        "print(\"The answer is: \", answer)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "7GixXra_DprR",
+        "colab_type": "text"
+      },
+      "source": [
+        "Note that it was really important here that I gave a value to answer before we entered the loop. Python will give you an error if you don't tell Python that answer starts with 0.\n",
+        "\n",
+        "Sometimes it can be difficult to tell what is going on inside the loop, so I often like to put in a print statement to see what values are in my variables"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "tGhhjI1bEveM",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "answer = 0\n",
+        "for number in range(6):\n",
+        "  print(\"I am about to add\", number, \"to my answer which is\", answer)\n",
+        "  answer = number + answer\n",
+        "print(\"The answer is: \", answer)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "P_oHtB4lEwZ5",
+        "colab_type": "text"
+      },
+      "source": [
+        "Of course, this wasn't expecially interesting, because we could have added these numbers by hand.\n",
+        "\n",
+        "... But Python can just as easily add all of the numbers between 0 and 100."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "QA06fPbVDxi6",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "answer = 0\n",
+        "for number in range(101):\n",
+        "  answer = answer + number\n",
+        "print(\"The answer is: \", answer)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "A6eZjV1mD0qZ",
+        "colab_type": "text"
+      },
+      "source": [
+        "It is often a good idea to test your program using small numbers (or a small amount of input data) so that you can check it by hand and make sure it works. After that you can go on to ask Python to do something with big numbers (or a large amount of data) where you don't know the answer. "
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "GrX96DJfFGb2",
+        "colab_type": "text"
+      },
+      "source": [
+        "\n",
+        "\n",
+        "---\n",
+        "\n",
+        "\n",
+        "\n",
+        "---\n",
+        "\n",
+        "\n",
+        "**LOOKING FORWARD**\n",
+        "\n",
+        "I realize there was a lot of math and number stuff in this worksheet. I will be sure to include more examples next week that don't have so many numbers in them!\n",
+        "\n",
+        "Loops definitely take quite a bit of practice to get used to, so we are going to be continuing to do loop examples for quite a few weeks to come (although we will mix them in with some additional new concepts). "
       ]
     }
   ]
