--- a/Week_3_Worksheet.ipynb
+++ b/Week_3_Worksheet.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Week 3 Worksheet.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMiJaFk434DWIEIrpy7T2XY",
+      "authorship_tag": "ABX9TyPe89nrzc2sWi37wtwMpmiP",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -96,7 +96,7 @@
         "  print(\"You are old\")\n",
         "  print(\"Your age is\", age)\n"
       ],
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -116,11 +116,7 @@
       "metadata": {
         "id": "ZSYVSmZ7Fy0-",
         "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 34
-        },
-        "outputId": "c466b201-7940-4e7f-d589-4469af82dfa2"
+        "colab": {}
       },
       "source": [
         "age = 18\n",
@@ -128,16 +124,8 @@
         "  print(\"You are old\")\n",
         "print(\"Your age is\", age)"
       ],
-      "execution_count": 4,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "Your age is 18\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -179,11 +167,7 @@
       "metadata": {
         "id": "ktN_BPbMF_2m",
         "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 50
-        },
-        "outputId": "bbbef76f-8934-42b1-c9e9-42b625b1ce44"
+        "colab": {}
       },
       "source": [
         "number = int( input(\"Enter a number: \") )\n",
@@ -192,17 +176,8 @@
         "if not number < 6:\n",
         "  print(\"I need more than one hand to count to\", number)"
       ],
-      "execution_count": 6,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "Enter a number: 7\n",
-            "I need more than one hand to count to 7\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -325,7 +300,7 @@
       "source": [
         "color = input(\"Guess a color: \")\n",
         "number = int( input(\"Guess a number: \") )\n",
-        "if color == \"pink\" and number == 7:\n",
+        "if (color == \"pink\") and (number == 7):\n",
         "  print(\"Wow, you guessed both the color and the number correctly!\")"
       ],
       "execution_count": null,
@@ -352,8 +327,8 @@
       },
       "source": [
         "color == input(\"Guess a color: \")\n",
-        "number == input(\"Guess a number: \")\n",
-        "if color == \"pink\" or number == 7:\n",
+        "number == int( input(\"Guess a number: \") )\n",
+        "if (color == \"pink\") or (number == 7):\n",
         "  print(\"Wow, you guessed at least one correctly!\")"
       ],
       "execution_count": null,
@@ -422,11 +397,11 @@
         "number = int( input(\"Guess a number: \") )\n",
         "\n",
         "if color == \"pink\":\n",
-        "  correct_guess = correct_guess + 1\n",
+        "  number_correct = number_correct + 1\n",
         "if number == 7:\n",
-        "  correct_guess = correct_guess + 1\n",
+        "  number_correct = number_correct + 1\n",
         "\n",
-        "print(\"You guessed\", correct_guess, \"correctly!\")"
+        "print(\"You guessed\", number_correct, \"correctly!\")"
       ],
       "execution_count": null,
       "outputs": []
@@ -534,9 +509,9 @@
       },
       "source": [
         "while not (number > 0 and number < 11):\n",
-        "  number = input(\"Enter a number between 1 and 10: \")\n"
+        "  number = int( input(\"Enter a number between 1 and 10: \") )\n"
       ],
-      "execution_count": null,
+      "execution_count": 20,
       "outputs": []
     },
     {
@@ -561,10 +536,10 @@
         "colab": {}
       },
       "source": [
-        "number = input(\"Enter a number between 1 and 10: \")\n",
+        "number = int( input(\"Enter a number between 1 and 10: \") )\n",
         "while not (number > 0 and number < 11):\n",
         "  print(\"No you fool!\", number, \"isn't between 1 and 10\")\n",
-        "  number = input(\"Enter a number between 1 and 10: \")"
+        "  number = int( input(\"Enter a number between 1 and 10: \") )"
       ],
       "execution_count": null,
       "outputs": []
@@ -591,10 +566,10 @@
       "source": [
         "counter = 0\n",
         "\n",
-        "number = input(\"Enter a number between 1 and 10: \")\n",
+        "number = int( input(\"Enter a number between 1 and 10: \") )\n",
         "while not (number > 0 and number < 11):\n",
         "  print(\"No you fool!\", number, \"isn't between 1 and 10\")\n",
-        "  number = input(\"Enter a number between 1 and 10: \")\n",
+        "  number = int( input(\"Enter a number between 1 and 10: \") )\n",
         "\n",
         "  counter = counter + 1\n",
         "print(\"You entered\", counter, \"wrong numbers before you entered a number between 1 and 10\")"
@@ -634,7 +609,7 @@
       },
       "source": [
         "for some_variable_name in range(5):\n",
-        "  print(\"Happy Birthday to You!)"
+        "  print(\"Happy Birthday to You!\")"
       ],
       "execution_count": null,
       "outputs": []
