--- a/Week_3_Worksheet.ipynb
+++ b/Week_3_Worksheet.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Week 3 Worksheet.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPe89nrzc2sWi37wtwMpmiP",
+      "authorship_tag": "ABX9TyN3eHye6rDZzFm3sn7XL/mf",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -31,7 +31,7 @@
         "colab_type": "text"
       },
       "source": [
-        "# WEEK TWO WORKSHEET : Flow Control (If statements and Loops)"
+        "# WEEK THREE WORKSHEET : Flow Control (If statements and Loops)"
       ]
     },
     {
