--- a/Assignment_Week_3.ipynb
+++ b/Assignment_Week_3.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Assignment Week 3.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyP84ccI3Aduid7bdITeZaEh",
+      "authorship_tag": "ABX9TyNXLfoMXaExZuXhnYRSYxGd",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -55,6 +55,10 @@
         "*   Additionally, please click the check box to add a README file to your repository\n",
         "\n",
         "Once you have a repository, you can save files to your repository from Google Colab. To do this, go to the \"File\" menu in the corner and select \"Save a Copy in Github\". \n",
+        "\n",
+        "UNFORTUNATELY: Because you grabbed these instructions from My GitHub account, it wants to save back to my GitHub account (which won't work). Therefore one option is to create a new Notebook (File --> New Notebook) which you can then save to your GitHub account. \n",
+        "\n",
+        "(The other option is to first save a copy into Google Drive to make a new notebook that has these instructions and then since that is a new Notebook, you can save it to your GitHub account)\n",
         "\n",
         "This will require you to provide you to provide your GitHub login information to authorize Google Colab to write files into your GitHub repository. \n",
         "\n",
