--- a/Week_5_Worksheet.ipynb
+++ b/Week_5_Worksheet.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Week 5 Worksheet.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyP9I7ZC0GaACXXRCrZdCsui",
+      "authorship_tag": "ABX9TyMbigz9J5F2b46D1k77yV78",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -149,10 +149,10 @@
       "source": [
         "#This function adds up all of the numbers that are less than the upper-limit\n",
         "def add_up_numbers(upper_limit):\n",
-        "  answer_so_far = 0\n",
+        "  function_answer = 0\n",
         "  for current_number in range(upper_limit):\n",
-        "    answer_so_far = answer_so_far + current_number\n",
-        "  return answer_so_far"
+        "    function_answer = function_answer + current_number\n",
+        "  return function_answer"
       ],
       "execution_count": null,
       "outputs": []
@@ -189,7 +189,7 @@
         "add_up_numbers(10)\n",
         "\n",
         "#This doesn't work\n",
-        "print(\"Adding up all the numbers less than 10 gives us\", answer_so_far)"
+        "print(\"Adding up all the numbers less than 10 gives us\", function_answer)"
       ],
       "execution_count": null,
       "outputs": []
@@ -205,7 +205,7 @@
         "\n",
         "That part worked great, but when I then asked Python to print the answer, things it didn't work.\n",
         "\n",
-        "The reason for this is because **answer_so_far** is a variable that lives inside the function **add_up_numbers** ... the variable belongs to the function and so we can't see the variable outside the function. \n",
+        "The reason for this is because **function_answer** is a variable that lives inside the function **add_up_numbers** ... the variable belongs to the function and so we can't see the variable outside the function. \n",
         "\n",
         "In order to make use of the answer, we need to assign the return value of the function to a variable that lives in our main program.\n"
       ]
@@ -284,7 +284,7 @@
         "\n",
         "print(\"30 hours from 2 o'clock the time will be\", answer, \"o'clock\")"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -378,7 +378,7 @@
         "    answer = answer - 12\n",
         "  return answer"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
